# race-vision

./: .env  .gitignore  Cargo.toml  race-vision.excalidraw  readme.md
desktop-app/: components.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
desktop-app/public/: overlay.html
desktop-app/src/: App.css  App.tsx  Root.tsx  actions.ts  app-layout.tsx  index.tsx  main.tsx  overlay-main.tsx  routeTree.gen.ts  router.tsx
desktop-app/src-tauri/: Cargo.toml  DATABASE.md  tauri.conf.json
src/: lib.rs  main.rs
src/app_state/: app_state.rs  mod.rs
src/client/: error.rs  helpers.rs  iracing_client.rs  mod.rs  session_state.rs
src/ibt/: ibt.rs
src/sdk/: broadcast.rs  broadcaster.rs  error.rs  header.rs  helpers.rs  irsdk.rs  mod.rs  status.rs  sub_headers.rs  telemtry_vars.rs  var_buffer.rs  var_header.rs
src/test/: helpers.rs
src/utils/: constants.rs  enums.rs  mod.rs  telemtry_vars.rs  tracing.rs
telemetry-core/: Cargo.toml
telemetry-core/src/: lib.rs  main.rs
telemetry-core/src/client/: error.rs  helpers.rs  iracing_client.rs  mod.rs  session_state.rs
telemetry-core/src/client/broadcast/: mod.rs
telemetry-core/src/client/telemetry/: memory_map.rs  mod.rs  var_buffer.rs  var_cache.rs  var_kinds.rs
telemetry-core/src/client/telemetry/models/: header.rs  var_header.rs
telemetry-core/src/domain/: camera.rs  mod.rs  pit.rs  session.rs  track.rs
telemetry-core/src/domain/iracing_errors/: mmap_error.rs  mod.rs  resolver.rs  shared_memory.rs  shared_memory_error.rs
telemetry-core/src/dto/: mod.rs
telemetry-core/src/ibt/: mod.rs  session_header.rs
telemetry-core/src/iracing_client/: client.rs  error.rs  mod.rs  session_state.rs
telemetry-core/src/iracing_client/broadcast/: mod.rs
telemetry-core/src/iracing_client/telemetry/: memory_map.rs  mod.rs  telemetry_resolver.rs  var_buffer.rs  var_cache.rs  var_kinds.rs
telemetry-core/src/iracing_client/telemetry/raw/: header.rs  var_header.rs
telemetry-core/src/utils/: enums.rs
telemetry-core/src/utils/constants/: size.rs
telemetry-core/src/utils/enums/: mod.rs
telemetry-core/tests/: helpers.rs  irsdk.rs  main.rs
telemetry-core/tests/memory/: header.rs
tests/: helpers.rs  irsdk.rs
tests/memory/: header.rs  (+1 more)
(+250 files in other folders)
