[package]
name = "race-vision"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.4"
byteorder = "1.5.0"
memmap2 = "0.9.9"
reqwest = "0.12.24"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

serde = "1.0.228"
serde_yaml = "0.9.33"

clap = "4.5.51"
thiserror = "2.0.17"
tracing = "0.1.41"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_System_Memory",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem",
  "Win32_UI_WindowsAndMessaging",
] }
