[package]
name = "telemetry-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.89"

# HTTP client
reqwest = "0.12.24"

# Memory and data handling
memmap2 = "0.9.9"
byteorder = "1.5.0"
bitflags = "2.9.4"

# Serialization
serde = "1.0.228"
serde_yaml = "0.9.33"

# CLI and error handling
clap = "4.5.51"
thiserror = "2.0.17"
color-eyre = "0.6.5"

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_System_Memory",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem",
  "Win32_UI_WindowsAndMessaging",
] }
